[package]
name = "continue_stream"
version = "0.1.0"
edition = "2024"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
repository = "https://github.com/drewcrawford/continue_stream"
homepage = "https://sealedabstract.com/code/continue_stream"
license = "MIT OR Apache-2.0"
keywords = ["continuation", "async", "channel", "iterator", "stream"]
description = "A Swift-style AsyncIterator.Continuation-style channel for Rust"
categories = ["asynchronous", "concurrency", "rust-patterns"]
exclude = [".*"]
rust-version = "1.85.1"

[dependencies]
atomic-waker = "1"
futures = "0.3"
wasm_safe_mutex = "0.1.0"

[dev-dependencies]
test_executors = "0.3"

[patch.crates-io]
#test_executors = { path = "../test_executors" }
#test_executors_proc = { path = "../test_executors/test_executors_proc" }