[package]
name = "continue_stream"
version = "0.1.0"
edition = "2024"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
repository = "https://github.com/drewcrawford/continue_stream"
homepage = "https://sealedabstract.com/code/continue_stream"
license = "MIT OR Apache-2.0"
keywords = ["continuation", "async", "channel", "iterator", "stream"]
description = "A Swift-style AsyncIterator.Continuation-style channel for Rust"
categories = ["asynchronous", "concurrency", "rust-patterns","no-std"]
exclude = [".*"]
rust-version = "1.85.1"

[features]


[dependencies]
atomic-waker = { version = "1", default-features = false }
futures = { version = "0.3", default-features = false }
wasm_safe_thread = "0.1.1"

[dev-dependencies]
test_executors = "0.4.1"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.56"
wasm_safe_thread = "0.1.1"

[patch.crates-io]
#test_executors = { path = "../test_executors" }
#test_executors_proc = { path = "../test_executors/test_executors_proc" }